<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:stateListAnimator="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/app_name">

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/ripple"
                android:padding="16dp"
                android:src="@drawable/ic_about">

            </ImageButton>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/permissions"
        android:textSize="24dp"
        android:padding="8dp"
        android:textStyle="bold|normal"
        android:background="@drawable/border_box"/>

    <android.widget.Switch
        android:id="@+id/switch_custom_status_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/enable_service"
        android:textSize="18dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        tools:visibility="visible" />

    <android.widget.Switch
        android:id="@+id/modify_settings_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/perm_modify_system_settings"
        android:textSize="18dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        tools:visibility="visible" />

    <android.widget.Switch
        android:id="@+id/display_over_apps_switch"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/perm_display_over_apps"
        android:textSize="18dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        tools:visibility="visible" />
</LinearLayout>
